--- a/src/app/users-settings-form/users-settings-form.component.html
+++ b/src/app/users-settings-form/users-settings-form.component.html
@@ -1,4 +1,4 @@
 <form action="">
     <input placeholder="Name" type="text">
-    <button>Ok</button>
+    <button class="btn btn-primary">Ok</button>
 </form>
