--- a/src/app/users-settings-form/users-settings-form.component.html
+++ b/src/app/users-settings-form/users-settings-form.component.html
@@ -1,4 +1,10 @@
-<form action="">
-    <input placeholder="Name" type="text">
-    <button class="btn btn-primary">Ok</button>
-</form>
+<div class="container">
+    <h2>User Settings</h2>
+    <form>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" name="name" class="form-control" type="text">
+        </div>
+        <button class="btn btn-primary">Send</button>
+    </form>
+</div>
