--- a/src/app/users-settings-form/users-settings-form.component.html
+++ b/src/app/users-settings-form/users-settings-form.component.html
@@ -5,6 +5,32 @@
             <label for="name">Name</label>
             <input id="name" name="name" class="form-control" type="text">
         </div>
+        <div class="form-check form-group">
+            <input type="checkbox" class="form-check-input" id="emailOffers" name="emailOffers">
+            <label for="emailOffers" class="form-check-label">
+                Email Special Offers
+            </label>
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="lightInterface" value="light" name="interfaceStyle" checked>
+                <label class="form-check-label" for="lightInterface">
+                    Light
+                </label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="mediumInterface" value="medium"  name="interfaceStyle">
+                <label class="form-check-label" for="mediumInterface">
+                    Medium
+                </label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="darkInterface" value="dark"  name="interfaceStyle">
+                <label class="form-check-label" for="darkInterface">
+                    Dark
+                </label>
+            </div>
+        </div>
         <button class="btn btn-primary">Send</button>
     </form>
 </div>
