--- a/src/app/users-settings-form/users-settings-form.component.html
+++ b/src/app/users-settings-form/users-settings-form.component.html
@@ -11,6 +11,7 @@
                 Email Special Offers
             </label>
         </div>
+        <p>User Interface Style</p>
         <div class="form-group">
             <div class="form-check">
                 <input type="radio" class="form-check-input" id="lightInterface" value="light" name="interfaceStyle" checked>
@@ -31,6 +32,24 @@
                 </label>
             </div>
         </div>
+        <div class="form-group">
+            <label for="subscriptionType">Subscription Type</label>
+            <select id="subscriptionType" class="form-control">
+                <option>Monthly</option>
+                <option>Annual</option>
+                <option>Lifetime</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="notes">Notes</label>
+            <textarea name="notes" id="notes" rows="3" class="form-control"></textarea>
+        </div>
+       
+        <!-- <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" name="password">
+        </div> -->
+ 
         <button class="btn btn-primary">Send</button>
     </form>
 </div>
