--- a/src/app/users-settings-form/users-settings-form.component.html
+++ b/src/app/users-settings-form/users-settings-form.component.html
@@ -1,53 +1,65 @@
 <div class="container">
-    <h2>User Settings</h2>
-    <form #form="ngForm">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input [(ngModel)]="userSettings.name" id="name" name="name" class="form-control" type="text">
-        </div>
-        <div class="form-check form-group">
-            <input [(ngModel)]="userSettings.emailOffers" type="checkbox" class="form-check-input" id="emailOffers" name="emailOffers">
-            <label for="emailOffers" class="form-check-label">
-                Email Special Offers
-            </label>
-        </div>
-        <p>User Interface Style</p>
-        <div class="form-group">
-            <div class="form-check">
-                <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="lightInterface" value="light" name="interfaceStyle" checked>
-                <label class="form-check-label" for="lightInterface">
-                    Light
-                </label>
-            </div>
-            <div class="form-check">
-                <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="mediumInterface" value="medium"  name="interfaceStyle">
-                <label class="form-check-label" for="mediumInterface">
-                    Medium
-                </label>
-            </div>
-            <div class="form-check">
-                <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="darkInterface" value="dark"  name="interfaceStyle">
-                <label class="form-check-label" for="darkInterface">
-                    Dark
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="subscriptionType">Subscription Type</label>
-            <select [(ngModel)]="userSettings.subscriptionType" name="subscriptionType" id="subscriptionType" class="form-control">
-                <option>Monthly</option>
-                <option>Annual</option>
-                <option>Lifetime</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="notes">Notes</label>
-            <textarea [(ngModel)]="userSettings.notes" name="notes" id="notes" rows="3" class="form-control"></textarea>
-        </div>
- 
-        <button class="btn btn-primary">Send</button>
-    </form>
+  <h2>User Settings</h2>
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="Name" [(ngModel)]="name" required
+        #nameField="ngModel"
+        (blur)="onBlur(nameField)"
+        [class.field-error]="form.submitted && nameField.invalid">
+      <div [hidden]="!form.submitted || nameField.valid" class="alert alert-danger">
+        Enter a name
+      </div>
+    </div>
+
+    <div class="form-check form-group">
+      <input [(ngModel)]="userSettings.emailOffers" type="checkbox" class="form-check-input" id="emailOffers"
+        name="emailOffers">
+      <label for="emailOffers" class="form-check-label">
+        Email Special Offers
+      </label>
+    </div>
+    <p>User Interface Style</p>
+    <div class="form-group">
+      <div class="form-check">
+        <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="lightInterface"
+          value="light" name="interfaceStyle" checked>
+        <label class="form-check-label" for="lightInterface">
+          Light
+        </label>
+      </div>
+      <div class="form-check">
+        <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="mediumInterface"
+          value="medium" name="interfaceStyle">
+        <label class="form-check-label" for="mediumInterface">
+          Medium
+        </label>
+      </div>
+      <div class="form-check">
+        <input [(ngModel)]="userSettings.interfaceStyle" type="radio" class="form-check-input" id="darkInterface"
+          value="dark" name="interfaceStyle">
+        <label class="form-check-label" for="darkInterface">
+          Dark
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="subscriptionType">Subscription Type</label>
+      <select [(ngModel)]="userSettings.subscriptionType" name="subscriptionType" id="subscriptionType"
+        class="form-control">
+        <option>Monthly</option>
+        <option>Annual</option>
+        <option>Lifetime</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="notes">Notes</label>
+      <textarea [(ngModel)]="userSettings.notes" name="notes" id="notes" rows="3" class="form-control"></textarea>
+    </div>
+
+    <button class="btn btn-primary">Send</button>
+  </form>
 </div>
 <h3>
-    {{ form.value | json }}
+  {{ form.value | json }}
 </h3>
